# MITWake

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_docs.yml  pytest.yml  python-package.yml
MITWake/: BaseClasses.py  Calibrate.py  CurledWake.py  REWS.py  Rotor.py  Superposition.py  Turbine.py  Wake.py  Windfarm.py  Windfields.py
MITWake/Rotor/: ActuatorDisk.py  BEM.py  GradActuatorDisk.py
docs/source/: REWS.rst  Rotor.rst  Superposition.rst  Turbine.rst  Wake.rst  Windfarm.rst  conf.py  index.rst
examples/: example_01_power_yaw_relationship.py  example_02_wake_profile.py  example_03_2_turbine_optimal.py  example_03_simple_windfarm.py  example_04_2_turbine_optimal.py  example_04_optimal_yaw_thrust_strategy.py  example_05_optimal_yaw_thrust_strategy.py  example_06_multiturbine_optimization.py
mit_yaw_induction_wake_model/: ActuatorDisk.py  Gradients.py  REWS.py  Rotor.py  Superposition.py  Turbine.py  Wake.py  Windfarm.py
tests/: test_analytical_vs_numerical.py  test_basic_vs_gradient.py  test_farm_gradients.py  test_gradients.py  test_mit_yaw_induction_wake_model.py  test_turbine_gradients.py  test_wake_superposition.py  test_wm_validation.ipynb
