[tool.poetry]
name = "MIT_yaw_induction_wake_model"
version = "0.1.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
packages = [{include = "mit_yaw_induction_wake_model"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
ipython = "^8.14.0"
pandas = "^2.0.2"


[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
